# duras

./: .gitignore  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml
debian/: changelog  control  copyright  duras.install  duras.postinst.debhelper  duras.prerm.debhelper
docs/: changelog.md  commands.md  contributing.md  encryption.md  file-format.md  gpg-setup.md  index.md  installation.md  ios-ashell.md  workflows.md
duras/: __init__.py  cli.py  core.py
duras-ashell/: duras_ashell.py
duras-vim/: README.md  duras_bridge.vim
man/: duras.1
