[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "duras"
version = "1.0.7"
description = "plain-text daily notes with optional encryption"
readme = "README.md"
license = "ISC"
authors = [{ name = "Sergiy Duras" }]
requires-python = ">=3.9"
keywords = ["notes", "diary", "plaintext", "gpg", "encryption", "cli", "terminal"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: BSD",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://codeberg.org/duras/duras"
Repository = "https://codeberg.org/duras/duras"
"Bug Tracker" = "https://codeberg.org/duras/duras/issues"
Changelog = "https://codeberg.org/duras/duras/releases"

[project.scripts]
duras = "duras.cli:main"

[tool.setuptools]
packages = ["duras"]

[tool.black]
line-length = 79
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
strict = true
show_error_codes = true
pretty = true
warn_unused_ignores = true
warn_redundant_casts = true
