[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "duras"
version = "1.1.0"
description = "plain-text daily notes with optional encryption"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Sergiy Duras", email = "sergiy@duras.org" }]
requires-python = ">=3.9"
keywords = ["notes", "diary", "journal", "plaintext", "plain-text", "gpg", "encryption", "cli", "terminal", "daily"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: BSD",
    "Operating System :: POSIX :: BSD :: FreeBSD",
    "Operating System :: POSIX :: BSD :: NetBSD",
    "Operating System :: POSIX :: BSD :: OpenBSD",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
    "Topic :: Text Processing",
    "Topic :: System :: Archiving",
]

[project.urls]
Homepage = "https://pypi.org/project/duras/"
Repository = "https://codeberg.org/duras/duras"
"Bug Tracker" = "https://codeberg.org/duras/duras/issues"
Changelog = "https://duras.readthedocs.io/en/latest/changelog/"

[project.scripts]
duras = "duras.cli:main"

[tool.setuptools]
packages = ["duras"]

[tool.black]
line-length = 79
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
strict = true
show_error_codes = true
pretty = true
warn_unused_ignores = true
warn_redundant_casts = true
